[package]
name = "semilattice-macros"
authors = ["Sofia <D20F2B901893DA801CF51D6E33680DA3EACB1E39>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies.syn]
version = "1.0.80"
default-features = false

[dependencies.proc-macro2]
version = "1.0"
default-features = false

[dependencies.quote]
version = "1.0"
default-features = false
