[package]
name = "semilog"
authors = ["Sofia <D20F2B901893DA801CF51D6E33680DA3EACB1E39>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md"]

[features]
default = ["alloc"]
alloc = []

[dependencies.semilog-macros]
version = "0.1.0"
path = "../semilog-macros"

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[dependencies.serde]
version = "1.0.130"
optional = true
default-features = false
features = ["derive", "alloc"]

[dependencies.minicbor]
version = "0.11.4"
optional = true
default-features = false
features = ["derive"]
