[package]
name = "threads"
authors = ["Sofia <D20F2B901893DA801CF51D6E33680DA3EACB1E39>"]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies.semilattice]
path = "../semilattice"
features = ["alloc", "minicbor"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.ciborium]
version = "0.1.0"

[dependencies.minicbor]
version = "0.9.1"
features = ["derive", "alloc", "half"]
