[package]
name = "threads"
authors = ["Sofia <D20F2B901893DA801CF51D6E33680DA3EACB1E39>"]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies.semilattice]
path = "../semilattice"
default-features = false
features = ["alloc", "minicbor"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.minicbor]
version = "0.9.1"
default-features = false
features = ["derive", "alloc", "half"]

[dependencies.git2]
version = "0.13.23"
default-features = false

[dependencies.pico-args]
version = "0.4.2"
default-features = false
