[package]
name = "threads"
authors = ["Sofia <D20F2B901893DA801CF51D6E33680DA3EACB1E39>"]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies.semilog]
path = "../semilog"
default-features = false
features = ["alloc", "minicbor"]

[dependencies.minicbor]
version = "0.11.4"
default-features = false
features = ["derive", "alloc", "half"]

[dependencies.git2]
version = "0.13.23"
default-features = false

[dependencies.pico-args]
version = "0.4.2"
default-features = false

[dependencies.serde]
version = "1.0.130"
optional = true
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1.0.68"
optional = true
default-features = false
features = ["alloc"]
